ingress/longtime.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longtime
  namespace: study-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
spec:
  ingressClassName: nginx
  rules:
  - host: longtime.test.com
    http:
      paths:
      - backend:
          service:
            name: ingress-err
            port:
              number: 8080
        path: /
        pathType: Prefix
